# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "dev"
version         = "0.0.0"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
publish         = false

[lib]
path            = "dev.rs"



[target.'cfg(windows)'.dependencies.winapi]
version         = "0.3.9"
features = [
    # shared

    # um
    "winuser",
]
